# flatpak-unsandbox

./: Cargo.toml  LICENSE  README.md
docs/: index.md
src/: bin.rs  lib.rs
