[package]
name = "flatpak-unsandbox"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Brue <ryanbrue@gmail.com>"]
license = "MIT"
categories = ["os::linux-apis"]
keywords = ["flatpak", "sandbox"]
repository = "https://github.com/ryanabx/flatpak-unsandbox"
description = "Run your flatpak app outside of the sandbox."
readme = "README.md"

[dependencies]
gio = "^0.19"
glib = "^0.19"
log = "0.4.21"
thiserror = "^1"
